Fixed alignment issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -98,6 +98,7 @@ body {
 
 .wrapper {
   float: left;
+  margin-top: 50px;
 }
 
 .description {
